[FIX] mail: active style of discuss sidebar item in dark mode
Before this commit, when an item in discuss app is active or
mouse-hovered in dark mode, there was no indicator.

This is caused by `bg-200` being equivalent to `bg-view` in
dark mode, therefore the active items were not visually distinct
from the background.

This commit fixes the issue by keeping `bg-200` in white mode, but
this becomes `bg-100` in dark mode. That way, active items are
slightly highlighted as they should

--- a/addons/mail/static/src/web/discuss_app/sidebar.scss
+++ b/addons/mail/static/src/web/discuss_app/sidebar.scss
@@ -6,16 +6,18 @@
         height: 15px;
     }
 
-    .o-mail-DiscussSidebar-item:hover {
-        background-color: $o-gray-200 !important;
-
-        .o-mail-DiscussCategoryItem-commands {
-            display: flex !important;
-        }
-    }
-
     .o-mail-DiscussCategory-im-status {
         transform: scale(0.75);
+    }
+}
+
+.o-mail-DiscussSidebar-item {
+    &:hover, &.o-active {
+        background-color: $o-gray-200 !important;
+    }
+
+    &:hover .o-mail-DiscussCategoryItem-commands {
+        display: flex !important;
     }
 }
 
